--- a/src/main/resources/templates/sanpham.html
+++ b/src/main/resources/templates/sanpham.html
@@ -44,7 +44,7 @@
 		<div class="hdr-left">
 			<a href="/" class="logo"> <img src="/images/logo.jpg"
 				alt="Logo Thiên Nhiên Garden" class="logo-img">
-				<h1>Cây Phong Thủy - Cây Văn Phòng - Phụ Kiện Cây Trồng</h1>
+				<h1>Thiên Nhiên Garden</h1>
 			</a>
 			<nav class="hnav">
 				<a href="/">Trang chủ</a> <a href="/sanpham" class="active">Sản
