--- a/src/main/resources/templates/lienhe.html
+++ b/src/main/resources/templates/lienhe.html
@@ -80,19 +80,22 @@
 		<div class="contact-info">
 			<h2>📍 Thông tin liên hệ</h2>
 			<p>
-				<b>Địa chỉ:</b> 12 Nguyễn Huệ, Quận 1, TP.HCM
+				<b>Địa chỉ:</b> 133A-Xã Thái Mỹ-Thành phố Hồ Chí Minh
 			</p>
 			<p>
-				<b>Email:</b> support@thiennhiengarden.vn
+				<b>Email:</b> Nguyentramhuong22@gmail.com
 			</p>
 			<p>
 				<b>Hotline:</b> <a href="tel:0905123456">0905 123 456</a>
 			</p>
 
 			<div class="social-links">
-				<a href="https://facebook.com" target="_blank">🌐 Facebook</a> <a
-					href="https://zalo.me" target="_blank">💬 Zalo</a> <a
-					href="https://tiktok.com" target="_blank">🎵 TikTok</a>
+				<a href="https://www.facebook.com/nguyen.kiet.273493/"
+					target="_blank">🌐 Facebook</a> 
+					<a href="https://www.tiktok.com/@illliiii_?_r=1&_t=ZS-91G0CCc9yhF"
+					target="_blank">🎵 TikTok</a>
+					<a href="https://www.instagram.com/tramhuongn/"
+					target="_blank">Instagram</a>
 			</div>
 		</div>
 
