--- a/src/main/resources/templates/trangchu/index.html
+++ b/src/main/resources/templates/trangchu/index.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/layout/layout}"
+      layout:decorate="~{layout/layout}"
       lang="vi">
 <head>
     <meta charset="UTF-8">
@@ -78,3 +78,4 @@
 </section>
 </body>
 </html>
+
