--- a/src/main/resources/templates/dangnhap.html
+++ b/src/main/resources/templates/dangnhap.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/layout/layout}"
+      layout:decorate="~{layout/layout}"
       lang="vi">
 <head>
 <title>🌿 Đăng nhập | Thiên Nhiên Garden - Cây Cảnh & Hoa Tươi</title>
