--- a/src/main/resources/templates/sanpham.html
+++ b/src/main/resources/templates/sanpham.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{/layout/layout}" lang="vi">
+	layout:decorate="~{layout/layout}" lang="vi">
 <title>🌸 Sản phẩm | Thiên Nhiên Garden - Cây cảnh & Hoa tươi</title>
 <link rel="stylesheet" th:href="@{/css/sanpham.css}">
 <link
